--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "@babel/preset-env": "^7.8.4",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "core-js": "^3.6.4",
-    "gulp": "^4.0.2",
-    "webpack": "^4.41.6",
-    "webpack-stream": "^5.2.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.8.0"
+    "eslint-plugin-jest": "^23.8.0",
+    "gulp": "^4.0.2",
+    "webpack": "^4.41.6",
+    "webpack-stream": "^5.2.1"
   },
   "dependencies": {
     "jquery": "^3.4.1",
